syntax = "proto3";

option java_package = "io.github.luposolitario.lonewolfredux.datastore";
option java_multiple_files = true;

message ModelSettings {
  string hugging_face_token = 1;
  string dm_model_file_path = 2;
  string narrative_tone = 3;
}
